objects/MPM4_Custom_Old_Project_History__c.object
<CustomObject>
    <description>Holds the old Project History from the projects in Milestone PM</description>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Old Project History</relationshipLabel>
        <relationshipName>Old_Project_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Old Project History</label>
    <nameField>
        <displayFormat>H-{0000000}</displayFormat>
        <label>Old Project History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Project History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>